Ported solution to java 8